[package]
name = "avanguard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model_derive = { path = "model-derive" }
actix-web = "4.3"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
log = "0.4"
secp256k1 = { version = "0.27", features = ["recovery", "rand-std", "global-context"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "chrono", "offline", "uuid"] }
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
uuid = { version = "1.3", features = ["v4"] }
ethers = { version = "2.0", features = ["eip712"] }
serde_json = "1.0"
openidconnect = "3.2"
chrono = "0.4"
actix-cors = "0.6"

[dev-dependencies]
jsonwebtoken = "8.3"
