[package]
name = "avanguard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4.3"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
ethers = { version = "2.0", features = ["eip712"] }
log = "0.4"
model_derive = { path = "model-derive" }
openidconnect = "3.2"
secp256k1 = { version = "0.27", features = ["recovery", "rand-std", "global-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "chrono", "offline", "uuid"] }
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
jsonwebtoken = "8.3"
