[package]
name = "avanguard"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4.3"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
ethers-core = { version = "2.0", features = ["eip712"] }
log = "0.4"
model_derive = { path = "model-derive" }
openidconnect = "3.2"
rand = "0.8"
secp256k1 = { version = "0.27", features = ["global-context", "rand-std", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["chrono", "postgres", "runtime-tokio-native-tls", "uuid"] }
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
jsonwebtoken = "8.3"

[profile.release]
lto = "thin"
strip = "symbols"
