[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
