[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive", "env"] }
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
jwt = "0.16.0"
log = "0.4.17"
openidconnect = "2.5.0"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
